--- a/src/markup/index.html
+++ b/src/markup/index.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="./css/base.css" rel="stylesheet">
-  <title>Project Starter</title>
+  <title>Ingredients</title>
 </head>
 <body>
   <main class="l--center">
-    <h1>Project Starter</h1>
-    <p>Update your index.html to change this text</p>
-    <p>And then refresh the page</p>
+    <h1>Ingredients</h1>
+    <section>
+      <a class="note-card" href="./multi-select-accordion.html">
+        Multi-select Accordion
+      </a>
+    </section>
   </main>
-  <script src="./index.js"></script>
 </body>
 </html>
