:sushi: update accordion styles and markup

--- a/src/markup/multi-select-accordion.html
+++ b/src/markup/multi-select-accordion.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <h1>Accessible Multi-select Accordion</h1>
+    <h1 class="component-heading">Multi-select Accordion</h1>
     <section>
       <dl class="m-accordion">
         <dt>
@@ -19,8 +19,8 @@
           <ul>
             <li><a href="https://www.w3.org/TR/wai-aria-practices/#disclosure">Disclosure (FAQ) Design Pattern</a></li>
             <li><a href="https://www.w3.org/TR/wai-aria-practices/examples/disclosure/disclosure-faq.html">Disclosure (FAQ) Example</a></li>
-            <li><a href="https://www.w3.org/TR/wai-aria-practices/#m-accordion">m-Accordion Design Pattern</a></li>
-            <li><a href="https://www.w3.org/TR/wai-aria-practices/examples/m-accordion/m-accordion.html">m-Accordion Example</a></li>
+            <li><a href="https://www.w3.org/TR/wai-aria-practices/#m-accordion">Accordion Design Pattern</a></li>
+            <li><a href="https://www.w3.org/TR/wai-aria-practices/examples/m-accordion/m-accordion.html">Accordion Example</a></li>
           </ul>
         </dd>
         <dt>
@@ -42,7 +42,7 @@
         </dt>
         <dd class="m-accordion__content" id="m-accordion-behavior" aria-hidden="false">
           <ul>
-            <li>Users can tab to an m-accordion button which will show focus that button</li>
+            <li>Users can tab to an accordion button which will show focus that button</li>
             <li>When using a keyboard and the NVDA screen reader users can hit Enter or Space to toggle the content for the focused m-accordion button</li>
             <li>When using the VO screen reader users can navigate to the button with Control + Option + Space</li>
             <li>Then when focused on the button, VO users can toggle the content with Control + Option + Space</li>
