--- a/src/markup/index.html
+++ b/src/markup/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,14 @@
   <link href="./css/base.css" rel="stylesheet">
   <title>Ingredients</title>
 </head>
+
 <body>
   <main class="l--center">
     <h1>Ingredients</h1>
     <section>
+      <a class="note-card" href="./modal.html">
+        Modal
+      </a>
       <a class="note-card" href="./multi-select-accordion.html">
         Multi-select Accordion
       </a>
