:sushi: update theming

--- a/src/markup/index.html
+++ b/src/markup/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +7,7 @@
   <link href="./css/base.css" rel="stylesheet">
   <title>Ingredients</title>
 </head>
-
-<body>
+<body class="theme-home">
   <main class="l--center">
     <h1>Ingredients</h1>
     <section>
