--- a/src/markup/modal.html
+++ b/src/markup/modal.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="no-js">
-    <main>
+    <main class="theme-modal l--border">
       <h1 class="component-heading">Modal</h1>
       <div class="wrapper">
         <button class="button button--open-modal" aria-describedby="open-modal">Sign Up For Our Newsletter</button>
