--- a/src/markup/multi-select-accordion.html
+++ b/src/markup/multi-select-accordion.html
@@ -8,7 +8,7 @@
   <title>Multi-select m-Accordion</title>
 </head>
 <body>
-  <main>
+  <main class="theme-accordion l--border">
     <h1 class="component-heading">Multi-select Accordion</h1>
     <section>
       <dl class="m-accordion">
