:fork_and_knife: update webpack js bundling

--- a/src/markup/multi-select-accordion.html
+++ b/src/markup/multi-select-accordion.html
@@ -51,6 +51,6 @@
       </dl>
     </section>
   </main>
-  <script src="./js/index.js"></script>
+  <script src="./js/multiSelectAccordion.js"></script>
 </body>
 </html>
