--- a/src/markup/modal.html
+++ b/src/markup/modal.html
@@ -35,5 +35,6 @@
     <span class="description" id="open-modal" aria-hidden="true">Opens Modal</span>
     <div class="modal-backdrop"></div>
   </div>
+  <script src="./js/modal.js"></script>
 </body>
 </html>
